--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,7 +3,7 @@ $content-width-desktop: 1000px;
 $hamburger-box-width: 60px;
 $mobile-menu-width: 250px;
 
-$body-text-color: rgba(0,0,0,0.54);
+$body-text-color: rgba(0,0,0,0.55);
 $heading-text-color: rgba(0,0,0,0.7);
 
 $light-gray-background-color: rgba(0,0,0,.02);
